--- a/index.html
+++ b/index.html
@@ -63,12 +63,18 @@
         methods: {
           register () {
             firebase.auth().createUserWithEmailAndPassword(this.email, this.password)
+              // .then(this.authUser = user)
+              .catch(error => alert(':/ ' + error.message))
           },
           signOut () {
             firebase.auth().signOut()
+              // .then(this.authUser = null)
+              .catch(error => alert(':/ ' + error.message))
           },
           signIn () {
             firebase.auth().signInWithEmailAndPassword(this.email, this.password)
+              // .then(this.authUser = user)
+              .catch(error => alert(':/ ' + error.message))
           }
         },
 
