--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <img :src="authUser.photoURL" alt="avatar" height="150">
         <p>What's up, {{authUser.displayName || 'friend' }}?</p>
         <button @click="signOut">Sign out</button>
+
+        <form @submit.prevent="updateProfile">
+          <h2>Update Profile</h2>
+          <input v-model="displayName" placeholder="Your name">
+          <input v-model="photoURL" placeholder="Your photo url">
+          <button>Update</button>
+        </form>
       </div>
 
       <div v-else>
@@ -63,7 +70,9 @@
         data: {
           email: '',
           password: '',
-          authUser: null
+          authUser: null,
+          displayName: null,
+          photoURL: null
         },
 
         methods: {
@@ -87,11 +96,23 @@
             firebase.auth().signInWithPopup(provider)
               .catch(error => alert('👿 ' + error.message))
               .then(data => console.log(data.user, data.credential.accessToken))
+          },
+          updateProfile () {
+            this.authUser.updateProfile({
+              displayName: this.displayName,
+              photoURL: this.photoURL
+            })
           }
         },
 
         created () {
-          firebase.auth().onAuthStateChanged(user => { this.authUser = user })
+          firebase.auth().onAuthStateChanged(user => {
+            this.authUser = user
+            if (user) {
+              this.displayName = user.displayName
+              this.photoURL = user.photoURL
+            }
+          })
         }
       })
     </script>
