update email & password / firebase

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
           <input v-model="photoURL" placeholder="Your photo url">
           <button>Update</button>
         </form>
+
+        <form @submit.prevent="updateEmail">
+          <h2>Update Email</h2>
+          <input v-model="email" placeholder="Your email">
+          <button>Update</button>
+        </form>
+
+        <form @submit.prevent="updatePassword">
+          <h2>Update Password</h2>
+          <input v-model="newPassword" type="password" placeholder="Your password">
+          <button>Update</button>
+        </form>
       </div>
 
       <div v-else>
@@ -72,7 +84,8 @@
           password: '',
           authUser: null,
           displayName: null,
-          photoURL: null
+          photoURL: null,
+          newPassword: null
         },
 
         methods: {
@@ -102,6 +115,15 @@
               displayName: this.displayName,
               photoURL: this.photoURL
             })
+          },
+          updateEmail () {
+            this.authUser.updateEmail(this.email)
+              .catch(error => alert('👿 ' + error.message))
+          },
+          updatePassword () {
+            this.authUser.updatePassword(this.newPassword)
+              .then(() => { this.newPassword = null })
+              .catch(error => alert('👿 ' + error.message))
           }
         },
 
@@ -111,6 +133,7 @@
             if (user) {
               this.displayName = user.displayName
               this.photoURL = user.photoURL
+              this.email = user.email
             }
           })
         }
