--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
     <div id="app">
       <h1>Vue - Firebase Auth</h1>
       <div v-if="authUser">
-        <h2>Signed in as {{authUser.email}}</h2>
+        <h2>Signed in as {{authUser.email}}
+          <img v-if="linkedGoogle" src="https://openclipart.org/download/227731/1442640788_social_32.svg" alt="google" height="20">
+          <img v-if="linkedPassword" src="https://openclipart.org/download/193055/simplemail.svg" alt="email" height="20">
+        </h2>
+
         <img :src="authUser.photoURL" alt="avatar" height="150">
+
         <p>What's up, {{authUser.displayName || 'friend' }}?</p>
+
         <button @click="signOut">Sign out</button>
+
+        <button v-if="!linkedGoogle" @click="linkGoogle">Link Google Account</button>
+
+        <button v-else @click="unlinkGoogle">Unlink Google Account</button>
+
 
         <form @submit.prevent="updateProfile">
           <h2>Update Profile</h2>
@@ -51,7 +62,7 @@
         <form @submit.prevent="signIn">
             <h2>Sign In</h2>
 
-            <input v-model="email" type="email" placeholder="Type your email">
+            <input v-model="email" type="email" placeholder="Type your email" >
 
             <input v-model="password" type="password" placeholder="Type your password">
 
@@ -88,6 +99,15 @@
           newPassword: null
         },
 
+        computed: {
+          linkedGoogle () {
+            return !!this.authUser.providerData.find(provider => provider.providerId === 'google.com')
+          },
+          linkedPassword () {
+            return !!this.authUser.providerData.find(provider => provider.providerId === 'password')
+          }
+        },
+
         methods: {
           register () {
             firebase.auth().createUserWithEmailAndPassword(this.email, this.password)
@@ -110,6 +130,17 @@
               .catch(error => alert('👿 ' + error.message))
               .then(data => console.log(data.user, data.credential.accessToken))
           },
+          linkGoogle () {
+            const provider = new firebase.auth.GoogleAuthProvider()
+            this.authUser.linkWithPopup(provider)
+              .catch(error => alert('👿 ' + error.message))
+              .then(data => console.log(data.user, data.credential.accessToken))
+          },
+
+          unlinkGoogle () {
+            this.authUser.unlink('google.com')
+          },
+
           updateProfile () {
             this.authUser.updateProfile({
               displayName: this.displayName,
