custom properties to user profile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <img :src="authUser.photoURL" alt="avatar" height="150">
 
-        <p>What's up, {{authUser.displayName || 'friend' }}?</p>
+        <p>What's up, {{authUser.displayName || 'friend' }} we know you like {{authUser.favoriteFood || 'food'}}.</p>
 
         <button @click="signOut">Sign out</button>
 
@@ -32,6 +32,12 @@
           <h2>Update Profile</h2>
           <input v-model="displayName" placeholder="Your name">
           <input v-model="photoURL" placeholder="Your photo url">
+          <button>Update</button>
+        </form>
+
+        <form @submit.prevent="updateCustomDetails">
+          <h2>Update Additional Details</h2>
+          <input v-model="favoriteFood" placeholder="Your favorite food">
           <button>Update</button>
         </form>
 
@@ -96,6 +102,7 @@
           authUser: null,
           displayName: null,
           photoURL: null,
+          favoriteFood: null,
           newPassword: null
         },
 
@@ -147,6 +154,10 @@
               photoURL: this.photoURL
             })
           },
+          updateCustomDetails () {
+            firebase.database().ref('users').child(this.authUser.uid)
+              .update({favoriteFood: this.favoriteFood})
+          },
           updateEmail () {
             this.authUser.updateEmail(this.email)
               .catch(error => alert('👿 ' + error.message))
@@ -165,6 +176,12 @@
               this.displayName = user.displayName
               this.photoURL = user.photoURL
               this.email = user.email
+              firebase.database().ref('users').child(user.uid).once('value', snapshot => {
+                if (snapshot.val()) {
+                  this.favoriteFood = snapshot.val().favoriteFood
+                  Vue.set(this.authUser, 'favoriteFood', this.favoriteFood)
+                      }
+              })
             }
           })
         }
